# questdb

./: .all-contributorsrc  .coderabbit.yaml  .coveralls.yml  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .prettierignore  .prettierrc  .travis.yml  4. Median of Two Sorted Arrays.txt  AGENTS.md  Amig.xml  BRANCH_RESEARCH_ilpv4.md  BRANCH_RESEARCH_qwp.md  CLAUDE.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_CLOSED_FIX.md  Cursor close issue  FINAL_TEST_STATUS.md  FIX_SUMMARY.md  FunctionUtils.java  HANDOVER_posting_index_fuzz.md  ILP_OPTIMIZATION_RESEARCH.md  ILP_V4_CONFIGURATION.md  ILP_V4_IMPLEMENTATION_PLAN.md  ILP_V4_MIGRATION.md  ILP_V4_SPECIFICATION.md  IMPLEMENTATION_SUMMARY.md  InfluxDB Line Protocol private key  LICENSE.txt  LIMIT_SUBQUERY_WINDOW_FIX.md  LIVE_VIEW_RELEASE_HANDOFF.md  MAVEN_CENTRAL_MIGRATION.md  PARQUET_UPDATE_FIX_SUMMARY.md  (+87 more)
compat/src/test/rust-sqlx/: Cargo.toml  Cargo.unlocked
compat/src/test/rust-sqlx/src/: main.rs
compat/src/test/rust-tokio/: Cargo.toml  Cargo.unlocked  readme.txt
compat/src/test/rust-tokio/src/: main.rs
compat/src/test/rust/scenarios/: Cargo.toml  Cargo.unlocked
core/: .clang-format  .gitattributes  .temp-questdb--module-path-arg-1665036363370.txt  .temp-questdb-classpath-arg-1665036363370.txt  CMAKE_README.md  CMakeLists.txt  Dockerfile  Dockerfile-linux  Dockerfile-linux-arm64  Dockerfile-windows  Makefile  README.md  VTJWCPSWHY  docker-entrypoint.sh  javac.20251102_024521.args  javac.20251102_025534.args  out.log.1  out.log.2  pom.xml
core/classes/services/: io.questdb.griffin.FunctionFactory
core/conf/: mime.types
core/rust/: intellij_triggers.xml
core/rust/parquet-format-safe/: .cargo_vcs_info.json  .gitignore  Cargo.toml  Cargo.toml.orig  LICENSE-APACHE  README.md  generate_parquet_format.sh
core/rust/parquet-format-safe/src/: lib.rs  parquet_format.rs
core/rust/parquet2/: CHANGELOG.md
core/rust/parquet2/benches/: decode_rle.rs
core/rust/parquet2/examples/: read_metadata.rs  write_sidecar.rs
core/rust/parquet2/examples/s3/: Cargo.toml
core/rust/parquet2/guide/: book.toml
core/rust/parquet2/parquet-tools/src/: main.rs
core/rust/parquet2/src/: lib.rs  parquet_bridge.rs  types.rs
core/rust/parquet2/src/bloom_filter/: hash.rs  mod.rs  read.rs
core/rust/parquet2/src/deserialize/: mod.rs
core/rust/parquet2/src/encoding/: mod.rs  uleb128.rs
core/rust/parquet2/src/metadata/: file_metadata.rs
core/rust/parquet2/src/page/: mod.rs
core/rust/parquet2/src/read/: metadata.rs
core/rust/parquet2/src/statistics/: binary.rs  boolean.rs  fixed_len_binary.rs  mod.rs  primitive.rs
core/rust/parquet2/src/write/: column_chunk.rs  compression.rs  file.rs  footer_cache.rs  mod.rs  page.rs  row_group.rs  statistics.rs  stream.rs
core/rust/parquet2/tests/: write_pyarrow.py
core/rust/qdb/: Cargo.toml  README.md
core/rust/qdb-core/: .gitignore  Cargo.toml  rust-toolchain.toml
core/rust/qdb-core/.cargo/: config.toml
core/rust/qdb-core/src/: byte_util.rs  cairo.rs  col_driver.rs  col_type.rs  error.rs  failpoints.rs  jlog.rs  lib.rs  memory_tracker.rs  types.rs  wal_lock.rs
core/rust/qdb-parquet-meta/: Cargo.toml
core/rust/qdb-parquet-meta/src/: column_chunk.rs  convert.rs  error.rs  footer.rs  header.rs  infer.rs  lib.rs  qdb_meta.rs  reader.rs  row_group.rs  types.rs  writer.rs
core/rust/qdb-sqllogictest/: Cargo.toml  README.md  deny.toml
core/rust/qdb-sqllogictest/sqllogictest/: Cargo.toml  README.md
core/rust/qdb-sqllogictest/sqllogictest-engines/: Cargo.toml
core/rust/qdb-sqllogictest/src/: lib.rs  rustfmt.toml
core/rust/qdb/.cargo/: config.toml
core/rust/qdb/src/: lib.rs
core/rust/qdbr/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml
core/rust/qdbr-test/: Cargo.toml
core/rust/qdbr-test/src/: lib.rs
core/rust/qdbr/.cargo/: config.toml
core/rust/qdbr/benches/: bench_row_group.rs  decode_page.rs  decode_rle.rs  encode_page.rs  jit_pipeline.rs  vectorized_decode.rs
core/rust/qdbr/parquet-format-safe/: LICENSE-MIT
core/rust/qdbr/parquet2/: Cargo.toml  LICENSE  README.md  codecov.yaml
core/rust/qdbr/src/: allocator.rs  cairo.rs  ffi_panic_guard.rs  files.rs  lib.rs  mem_utils.rs  qwp_zstd.rs  util.rs  utils.rs  wal_lock.rs
core/rust/qdbr/tests/: arrays.rs  binary.rs  decimal.rs  decode_binary.rs  decode_pm_e2e.rs  decode_primitives.rs  decode_strings.rs  decode_symbol.rs  decode_varchar_slice.rs  encode_array.rs  encode_arrays.rs  encode_binary.rs  encode_decimal.rs  encode_primitives.rs  encode_statistics.rs  encode_strings.rs  encode_symbol.rs  encode_varchar.rs  encode_varchar_multi_partition.rs  pm_inspect_e2e.rs  primitives.rs  row_groups.rs  slice_page_reader.rs  strings.rs  symbol.rs  varchar.rs  varchar_slice.rs
core/src/: c
core/src/main/assembly/: assembly.xml  binaries.xml  linux-runtime.xml  no-jre.xml  osx-runtime.xml  rt-freebsd.xml  rt-unix.xml  rt-win.xml  runtime.xml  web-console.xml  windows-runtime.xml
core/src/main/c/: Makefile
core/src/main/java/: module-info.java
core/src/main/resources/: .gitattributes  alert-manager-tpt.conf  alert-manager-tpt.json  function_list.txt  jaas.conf  log-stdout.conf  nfslog.conf  openapi-rest.yaml  openapi-telemetry.yaml  openapi-v1.yaml  qlog.conf  text_loader.json
core/src/main/swift/: afm.swift
core/src/test/c/: CMakeLists.txt
core/src/test/java/: module-info.java
core/src/test/resources/: .gitattributes  alert-manager-tpt-international.json  alert-manager-tpt-test-missing-message-key.json  date_test.formats  fixed-disk.sh  get.html  log-file.conf  logback-test.xml  mime_test.types  nfslog-bad-writer.conf  nfslog-silent.conf  nfslog1.conf  post.html  questdb-file-log.conf  server-http-disabled.conf  server-keep-alive.conf  server-net.conf  server.conf  test-log-alert.conf  test-log-silent.conf  test-log.conf
win64svc/: CMakeLists.txt  main.c
win64svc/src/: CMakeLists.txt  common.h  getopt.h  main.c  main.h  questdb.c  service.c  svcctrl.c
win64svc/src/java/: module io questdb benchmarks.java
(+34537 files in other folders)
