[package]
name = "qdb-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
bytemuck = "1.24.0"
dashmap = "6.1.0"
jni = "0.21.1"
memmap2 = "0.9.5"
num-traits = "0.2.19"
paste = "1.0.15"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.145"
