[package]
name = "qdbr"
version = "0.1.0"
edition = "2021"

[package.metadata]
rust-version = "nightly"

[lib]
name = "questdbr"
crate-type = ["dylib"]

[dependencies]
qdb-core = { path = "../qdb-core" }
jni = "0.21.1"
num-traits = "0.2.18"
parquet2 = { path = "parquet2" }
libc = "0.2.155"
once_cell = "1.19.0"
rayon = "1.10.0"
async-trait = "0.1.81"
clap = "4.5.9"
tokio = "1.38.2"
log = "0.4.22"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
alloc-checked = { version = "0.1.2" }

[dev-dependencies]
parquet = "51.0.0"
arrow = "51.0.0"
bytes = "1.6.0"
tempfile = "3.10.1"
rand = "0.9.0-alpha.1"
