[package]
name = "qdbr"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[package.metadata]
rust-version = "nightly"

[lib]
name = "questdbr"
crate-type = ["dylib", "rlib"]

[dependencies]
qdb-core = { path = "../qdb-core" }
jni = "0.21.1"
num-traits = "0.2.18"
parquet2 = { path = "parquet2" }
libc = "0.2.155"
once_cell = "1.19.0"
rayon = "1.10.0"
async-trait = "0.1.81"
clap = "4.5.9"
tokio = "1.38.0"
log = "0.4.22"
serde_json = "1.0.145"
serde = { version = "1.0.210", features = ["derive"] }
alloc-checked = { version = "0.1.3" }
nonmax = "0.5.5"

[dev-dependencies]
parquet = "56.2.0"
arrow = "56.2.0"
bytes = "1.11.1"
tempfile = "3.23.0"
rand = "0.9.2"
criterion = "0.4"

[[bench]]
name = "decode_page"
harness = false
