[package]
name = "questrun_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.5"
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0.64"
