[package]
name = "questdb-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"  # Optimize for size.
lto = true  # Link-time optimization.

[dependencies]
jni = "0.20.0"
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
tokio = { version = "1", features = ["full"] }

