[package]
name = "questdb-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"  # Optimize for size.
lto = true  # Link-time optimization.

[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
jni = "0.21.0"
dashmap = "5.4.0"
tokio = { version = "1", features = ["full"] }
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"

